add dev starter script

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,9 +11,10 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <img class="portrait" src="/img/yasin.jpg">
+        <p>This site was created by Andrew Mead. It uses data from mapbox.com and darksky.net!</p>
+        <img class="portrait" src="/img/me.png">
     </div>
-
+    
     {{>footer}}
 </body>
 
