--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,10 +11,10 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>This site was created by Andrew Mead. It uses data from mapbox.com and darksky.net!</p>
-        <img class="portrait" src="/img/me.png">
+        <p>This site was created by Yasin Alavi. It uses data from mapbox.com and darksky.net!</p>
+        <img class="portrait" src="/img/yasin.jpg">
     </div>
-    
+
     {{>footer}}
 </body>
 
